# uratool

./: .gitignore  .ignore  CMakeLists.txt  NOTES.md  README.md  build.sh  makefile  profile.json  test.json  urtool
comp/: CMakeCache.txt  Makefile  cmake_install.cmake
source/: application.cpp  application.h  device.cpp  device.h  gui_thread.cpp  gui_thread.h  gui_view.h  main.c  main.cpp  resourceconfiguration.cpp  resourceconfiguration.h  routines.cpp  routines.h  state.h  udev_thread.cpp  udev_thread.h
source/core/: application.cpp  application.h  helpers.h  primitives.h  threading.cpp  threading.h
